--- a/index1.html
+++ b/index1.html
@@ -20,23 +20,23 @@
    <div class="content">
 <div class="card">  
    <img src="https://placehold.co/120x120" alt=""> 
-    <p>    product 1      </p> 
-       <h3>     19.99$</h3>
+    <h3>    product 1      </h3> 
+       <p>     19.99$</p>
        <button class="dd"> Add to cart </button>
 </div>
 
 <div class="card">        
              
              <img src="https://placehold.co/120x120" alt="">
-              <p>    product 2     </p>  
-             <h3>     56.99$</h3>
+              <h3>    product 2     </h3>  
+             <p>     56.99$</p>
              <button class="dd"> Add to cart </button>
 </div>
 
 <div class="card"> 
    <img src="https://placehold.co/120x120" alt="">
-    <p>    product 3     </p>  
-       <h3>     39.90$</h3>
+    <h3>    product 3     </h3>  
+       <p>     39.90$</p>
        <button class="dd"> Add to cart </button>
  </div>
    </div> 
